--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,9 +73,21 @@
 
     <string name="shop_buy_item_0">Level Editor</string>
     <string name="shop_buy_item_1">No Ads</string>
-    <string name="shop_buy_item_2">Community Account</string>
+    <string name="shop_buy_item_2">Designer</string>
 
     <string name="shop_state_0">not buyed</string>
     <string name="shop_state_1">buyed</string>
+
+
+    <string name="shop_item_0_text_0">This gives you access to the Editor.</string>
+    <string name="shop_item_0_text_1">Design your own levels and play it.</string>
+
+    <string name="shop_item_1_text_0">Disable the ads in game.</string>
+
+    <string name="shop_item_2_text_0">This allows you to provide your levels.</string>
+    <string name="shop_item_2_text_1">Upload to the community website.</string>
+
+    <string name="shop_info">Tap on the product to see more information</string>
+
 
 </resources>
