--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,6 @@
     <string name="shop_item_2_text_1">Upload to the community website.</string>
 
     <string name="shop_info">Tap on the product to see more information</string>
-
+    <string name="tutorial_title">Tutorial Riddle Race</string>
 
 </resources>
