--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="menu_close">Exit Game</string>
     <string name="menu_editor">Level Editor</string>
     <string name="menu_editor_plain">Editor: </string>
+    <string name="menu_rate">Rate the App</string>
 
     <string name="menu_editor_board">Board</string>
     <string name="menu_editor_properties">Ball</string>
